Updated java, javafx, gradle